# zephyr

./: west.yml
modules/lsh/: README.md  lsh.c  lsh.h  lsh_commands.c
modules/lsh/test_shell/: CMakeLists.txt
modules/lsh/test_shell/src/: main.c
samples/app_test/: CMakeLists.txt
samples/app_test/src/: main.c
samples/modules/lsh/demo_shell/: CMakeLists.txt  prj.conf
samples/modules/lsh/demo_shell/src/: main.c
